feat(zb-db): expose RocksDB configuration
- walDisabled flag to disable usage of the WAL
- ioRateBytesPerSecond to limit the write I/O of RocksDB
- minWriteBufferNumberToMerge and maxWriteBufferNumber
- rewrites RocksDbConfiguration to be mutable and chainable

--- a/broker/src/test/resources/system/rocksdb-cfg.yaml
+++ b/broker/src/test/resources/system/rocksdb-cfg.yaml
@@ -8,3 +8,7 @@ zeebe:
         statisticsEnabled: true
         memoryLimit: 32MB
         maxOpenFiles: 3
+        maxWriteBufferNumber: 3
+        minWriteBufferNumberToMerge: 3
+        ioRateBytesPerSecond: 4096
+        walDisabled: true
